feat(client): implement safe update flows
Refs #2

AI-Tool: Codex Desktop
AI-Model: gpt-5.6-sol
AI-Reasoning: xhigh