@@ -11,12 +11,19 @@ import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Locale;
+import java.util.regex.Pattern;
 
 /** Small, dependency-free client for the anonymous version catalog. */
 final class ClientUpdateChecker {
     static final long CHECK_INTERVAL_MILLIS = 24L * 60L * 60L * 1000L;
     private static final int MAX_RESPONSE_BYTES = 64 * 1024;
     private static final int TIMEOUT_MILLIS = 8_000;
+    private static final int MAX_VERSION_LENGTH = 32;
+    private static final Pattern SEMVER = Pattern.compile(
+            "^(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)"
+                    + "(?:-(?:0|[1-9][0-9]*|[0-9A-Za-z-]*[A-Za-z-][0-9A-Za-z-]*)"
+                    + "(?:\\.(?:0|[1-9][0-9]*|[0-9A-Za-z-]*[A-Za-z-][0-9A-Za-z-]*))*)?"
+                    + "(?:\\+[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*)?$");
 
     private ClientUpdateChecker() {
     }
@@ -29,7 +36,7 @@ final class ClientUpdateChecker {
     static Result check(String serverBaseUrl, String currentVersion) throws Exception {
         URI base = requireSafeBaseUri(serverBaseUrl);
         String query = "implementation=android&platform=android&arch=any&current="
-                + URLEncoder.encode(normalizeVersion(currentVersion), StandardCharsets.UTF_8);
+                + URLEncoder.encode(normalizeVersion(currentVersion), StandardCharsets.UTF_8.name());
         URI endpoint = base.resolve("/api/public/client-version-check?" + query);
         HttpURLConnection connection = (HttpURLConnection) endpoint.toURL().openConnection();
         connection.setConnectTimeout(TIMEOUT_MILLIS);
@@ -58,11 +65,20 @@ final class ClientUpdateChecker {
         boolean updateAvailable = body.optBoolean("updateAvailable", false);
         boolean mandatory = body.optBoolean("mandatory", false);
         String latestVersion = body.optString("latestVersion", "").trim();
+        if (!latestVersion.isEmpty()) {
+            latestVersion = requireSemanticVersion(latestVersion);
+        }
         if (!updateAvailable) {
             return new Result(false, mandatory, latestVersion, null, null);
         }
         if (latestVersion.isEmpty()) {
             throw new IOException("version response omitted latestVersion");
+        }
+        Long packageId = body.has("packageId") && !body.isNull("packageId")
+                ? body.optLong("packageId", -1L)
+                : null;
+        if (packageId != null && packageId <= 0L) {
+            throw new IOException("version response contains an invalid packageId");
         }
         String sha256 = body.optString("sha256", "").trim().toLowerCase(Locale.ROOT);
         if (!sha256.matches("[0-9a-f]{64}")) {
@@ -76,13 +92,20 @@ final class ClientUpdateChecker {
         if (rawDownloadUrl.isEmpty()) {
             throw new IOException("version response omitted downloadUrl");
         }
-        URI downloadUri = serverBaseUri.resolve(rawDownloadUrl);
-        requireSafeDownloadUri(serverBaseUri, downloadUri);
+        URI rawDownloadUri = new URI(rawDownloadUrl);
+        URI downloadUri;
+        if (packageId != null) {
+            downloadUri = serverBaseUri.resolve(rawDownloadUri);
+            requireSafeHostedPackageUri(serverBaseUri, downloadUri, packageId);
+        } else {
+            downloadUri = rawDownloadUri;
+            requireSafeExternalPackageUri(downloadUri);
+        }
         String changelog = body.optString("changelogUrl", "").trim();
         URI changelogUri = null;
         if (!changelog.isEmpty()) {
             URI candidate = serverBaseUri.resolve(changelog);
-            requireSafeDownloadUri(serverBaseUri, candidate);
+            requireSafeChangelogUri(serverBaseUri, candidate);
             changelogUri = candidate;
         }
         return new Result(true, mandatory, latestVersion, downloadUri.toString(),
@@ -91,7 +114,8 @@ final class ClientUpdateChecker {
 
     private static URI requireSafeBaseUri(String raw) throws Exception {
         URI uri = new URI(raw == null ? "" : raw.trim());
-        if (!uri.isAbsolute() || uri.getHost() == null || !isSafeScheme(uri)) {
+        if (!uri.isAbsolute() || uri.getHost() == null || uri.getUserInfo() != null
+                || !isSafeScheme(uri)) {
             throw new IOException("serverBaseUrl must be an absolute HTTPS URL");
         }
         String normalized = uri.toString();
@@ -101,16 +125,46 @@ final class ClientUpdateChecker {
         return new URI(normalized);
     }
 
-    private static void requireSafeDownloadUri(URI base, URI value) throws IOException {
-        if (!value.isAbsolute() || value.getHost() == null || !isSafeScheme(value)) {
-            throw new IOException("version response contains an unsafe URL");
+    private static void requireSafeHostedPackageUri(URI base, URI value, long packageId) throws IOException {
+        String expectedPath = "/api/public/client-packages/" + packageId + "/download";
+        if (!isSafeAbsoluteUri(value) || !sameOrigin(base, value)
+                || !expectedPath.equals(value.getRawPath())
+                || value.getRawQuery() != null || value.getRawFragment() != null) {
+            throw new IOException("hosted package URL must stay on the configured server origin");
         }
-        // Relative package links must stay on the configured server. Absolute HTTPS changelog or
-        // package URLs remain supported for reverse proxies and external release notes.
-        if (!"https".equalsIgnoreCase(value.getScheme())
-                && !value.getHost().equalsIgnoreCase(base.getHost())) {
-            throw new IOException("clear-text download URL must stay on the configured server");
+    }
+
+    private static void requireSafeExternalPackageUri(URI value) throws IOException {
+        if (!isSafeAbsoluteUri(value)
+                || !"https".equalsIgnoreCase(value.getScheme())
+                || value.getRawQuery() != null || value.getRawFragment() != null) {
+            throw new IOException("external package URL must be an absolute HTTPS URL");
         }
+    }
+
+    private static void requireSafeChangelogUri(URI base, URI value) throws IOException {
+        if (!isSafeAbsoluteUri(value)
+                || (!"https".equalsIgnoreCase(value.getScheme()) && !sameOrigin(base, value))) {
+            throw new IOException("version response contains an unsafe changelog URL");
+        }
+    }
+
+    private static boolean isSafeAbsoluteUri(URI value) {
+        return value.isAbsolute() && value.getHost() != null && value.getUserInfo() == null
+                && isSafeScheme(value);
+    }
+
+    private static boolean sameOrigin(URI left, URI right) {
+        return left.getScheme().equalsIgnoreCase(right.getScheme())
+                && left.getHost().equalsIgnoreCase(right.getHost())
+                && effectivePort(left) == effectivePort(right);
+    }
+
+    private static int effectivePort(URI value) {
+        if (value.getPort() >= 0) {
+            return value.getPort();
+        }
+        return "https".equalsIgnoreCase(value.getScheme()) ? 443 : 80;
     }
 
     private static boolean isSafeScheme(URI uri) {
@@ -124,9 +178,18 @@ final class ClientUpdateChecker {
         return "localhost".equalsIgnoreCase(host) || "127.0.0.1".equals(host) || "::1".equals(host);
     }
 
-    private static String normalizeVersion(String value) {
+    private static String normalizeVersion(String value) throws IOException {
         String normalized = value == null ? "" : value.trim();
-        return normalized.startsWith("v") ? normalized.substring(1) : normalized;
+        return requireSemanticVersion(normalized);
+    }
+
+    private static String requireSemanticVersion(String value) throws IOException {
+        String normalized = value.startsWith("v") ? value.substring(1) : value;
+        if (normalized.length() < 5 || normalized.length() > MAX_VERSION_LENGTH
+                || !SEMVER.matcher(normalized).matches()) {
+            throw new IOException("version response contains an invalid semantic version");
+        }
+        return normalized;
     }
 
     private static byte[] readBounded(InputStream input) throws IOException {
